*SVN*

* Added that UrlHelper#mail_to will now also encode the default link title #749 [f.svehla@gmail.com]

* Removed the default option of wrap=virtual on FormHelper#text_area to ensure XHTML compatibility #1300 [thomas@columbus.rr.com]

* Adds the ability to include XML CDATA tags using Builder #1563 [Josh Knowles]. Example:

    xml.cdata! "some text" # => <![CDATA[some text]]>

* Added evaluation of <SCRIPT> blocks in content returned to Ajax calls #1577 [Thomas Fuchs/court3nay]

* Directly generate paths with a leading slash instead of tacking it on later.  #1543 [Nicholas Seckar]

* Fixed errant parameter modification in functional tests.  #1542 [Nicholas Seckar]

* Routes fail with leading slash #1540 [Nicholas Seckar]

* Added support for graceful error handling of Ajax calls #1217 [Jamis Buck/Thomas Fuchs]. Example:

    link_to_remote(
      "test", 
      :url => { :action => "faulty" }, 
      :update => { :success => "good", :failure => "bad" },
      403 => "alert('Forbidden- got ya!')",
      404 => "alert('Nothing there...?')", 
      :failure => "alert('Unkown error ' + request.status)")
  
* Attempt to explicitly flush the output at the end of CgiProcess#out

* Fixed assert_redirected_to to handle absolute controller paths properly #1472 [Rick Olson/Nicholas Seckar]

* Added event-based observations when frequency is not set on observe_field/form #1474 [flash@vanklinkenbergsoftware.nl]

* Added script.aculo.us Javascripts (controls.js, dragdrop.js, effects.js) (NEEDS MORE DESCRIPTION) #1509 [Thomas Fuchs]

* Fixed prototype to consider all fields it doesn't know as text (such as Safari's search) just like the browser in its serialization #1497 [Sean Treadway]

* Improved performance of Routes generation by a factor of 5 #1434 [Nicholas Seckar] 

* Added named routes (NEEDS BETTER DESCRIPTION) #1434 [Nicholas Seckar]

* Improved AbstractRequest documentation #1483 [court3nay@gmail.com]
