@@ -116,7 +116,7 @@ Ajax.Autocompleter.prototype = (new Ajax.Base()).extend({
       this.startIndicator();
       this.options.parameters = this.options.callback ?
         this.options.callback(this.element, Form.Element.getValue(this.element)) :
-          Form.Element.getValue(this.element);
+          Form.Element.serialize(this.element);
       new Ajax.Request(this.url, this.options);
     } else {
       this.active = false;
