@@ -1,5 +1,7 @@
 *SVN*
 
+* Added JavascriptHelper#draggable_element and JavascriptHelper#drop_receiving_element to facilitate easy dragging and dropping through the script.aculo.us libraries #1578 [Thomas Fuchs]
+
 * Added that UrlHelper#mail_to will now also encode the default link title #749 [f.svehla@gmail.com]
 
 * Removed the default option of wrap=virtual on FormHelper#text_area to ensure XHTML compatibility #1300 [thomas@columbus.rr.com]
